--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 
 <body>
 
-  <!--NOTE: The body will be constructed by the renderHomeView function called in the initialize function-->
+    <!--NOTE: The body will be constructed by the renderHomeView function called in the initialize function-->
+
+   <script id="home-tpl" type="text/x-handlebars-template">
+       <div class="header">
+           <h1>Home</h1>
+       </div>
+       <div class="search-bar">
+           <input className="search-key" type="text"/>
+       </div>
+       <ul class="employee-list"></ul>
+   </script>
 
     <script src="lib/jquery-1.8.2.min.js"></script>
     <script src="js/storage/memory-store.js"></script>
     <script src="js/main.js"></script>
+
     <script src="phonegap.js"></script>
+    <script src="lib/handlebars.js"></script>
 
 </body>
 
