--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
 
+<head>
+
+    <script src="css/source-sans-pro.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
 <body>
 
     <script src="lib/jquery-1.8.2.min.js"></script>
@@ -13,9 +20,11 @@
         <div class='header'>
             <h1>Home</h1></div>
         <div class='search-bar'>
-            <input class='search-key' type="text" />
+            <input class='search-key' type="search" />
         </div>
-        <ul class='employee-list'></ul>
+        <div class="scroll">
+            <ul class='employee-list'></ul>
+        </div>
     </script>
 
     <script id="employee-li-tpl" type="text/x-handlebars-template">
@@ -23,9 +32,26 @@
         <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
         {{/.}}
     </script>
-    
+
+    <script id="employee-tpl" type="text/x-handlebars-template">
+        <div class="header"><a href="#" class="button header-button header-button-left">Back</a>
+            <h1>Details</h1></div>
+        <div class="Details">
+            <img src="img/{{firstname}}_{{last_name}}.jpg" alt="" class="employee-image" />
+            <h1>{{firstName}} {{lastName}}</h1>
+            <h2>{{title}}</h2>
+            <span class="location"></span>
+            <ul>
+                <li><a href="tel:{{officePhone}}">Call Office<br/>{{officePhone}}</a></li>
+                <li><a href="tel:{{cellPhone}}">Call Cell<br/>{{cellPhone}}</a></li>
+                <li><a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a></li>
+            </ul>
+        </div>
+    </script>
+
     <!--NOTE main.js uses the handlebar templates and needs to be declared after the templates-->
     <script src="js/homeview.js"></script>
+    <script src="js/employeeview.js"></script>
     <script src="js/main.js"></script>
 
 </body>
